# TrafficAnalyzer

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
external_licenses/cpp-gui-template-sdl2/: repo
external_licenses/hungarian-algorithm-cpp/: repo
external_licenses/manrope/: repo
python_scripts/: analyze_log_data.ipynb
python_scripts/data/: combined.json  matecznego_2.json  vid_1_2.json  vid_3_2.json  vid_4_2.json
scripts/: cuda_install_help.txt  run_app.sh  run_build.sh  run_configure.sh
src/app/: CMakeLists.txt
src/app/App/: Main.cpp  TrafficAnalyzerApp.hpp
src/app/include/: Hungarian.h  backgroundEstimator.hpp  collisionEstimator.hpp  dataLogger.hpp  framePreprocessor.hpp  frameProvider.hpp  frameProviderWidget.hpp  imageViewer.hpp  inference.h  iou.hpp  kalmanEstimator.hpp  objectDetector.hpp  objectDetectorWidget.hpp  tracker.hpp  tracklet.hpp  trafficAnalyzer.hpp  trafficAnalyzerApp.hpp  trafficAnalyzerGui.hpp  trafficTracker.hpp  trajectoryGenerator.hpp  utils.hpp
src/app/include/data_structures/: backgroundEstimator_data.hpp  detection.hpp  hungarian_data.hpp
src/app/include/interfaces/: iInference.hpp
src/app/include/widgets/: backgroundEstimatorWidget.hpp  collisionEstimatorWidget.hpp  dataLoggerWidget.hpp  framePreprocessorWidget.hpp  frameProviderWidget.hpp  imageViewer.hpp  imgui-combo-filter.h  objectDetectorWidget.hpp  trafficAnalyzerWidget.hpp  trafficTrackerWidget.hpp  trajectoryGeneratorWidget.hpp  widget.hpp
src/app/src/: imageViewer.cpp  inference.cpp  kalmanEstimator.cpp  main.cpp  tracker.cpp  tracklet.cpp  trafficAnalyzer.cpp
src/core/Core/: Application.cpp  Application.hpp  Window.hpp
trash/: hungarian.hpp
